# FmoLogs

./: .env.local.example  .gitignore  .sdkmanrc  AGENTS.md  LICENSE  README.md  capacitor.config.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: capacitor-android-build.yml  tauri-build.yml  update-release-notes.yml
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
doc/: fmo-interface.md  fmo-station-control.md  platform-abstraction-plan.md  platform-abstraction-refactor.md  project-analysis-2026-06-18.md
scripts/: android-deploy.sh  build-web-with-update-env.sh  generate-android-icons.sh  patch-capacitor-android-webview-min.mjs  upload-qiniu-android-release.mjs
scripts/font-compression/: .gitignore  README.md  main.py  pyproject.toml  (+1 more)
src/: App.vue  main.js  style.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/plugins/background-audio/: .gitignore  Cargo.toml
src-tauri/plugins/background-audio/android/: build.gradle.kts
src-tauri/plugins/background-audio/android/src/main/: AndroidManifest.xml
src-tauri/plugins/background-audio/android/src/main/kotlin/com/fmologs/plugin/backgroundaudio/: AudioPlaybackService.kt  BackgroundAudioPlugin.kt
src-tauri/plugins/background-audio/permissions/: default.toml
src-tauri/plugins/background-audio/permissions/autogenerated/: reference.md
src-tauri/plugins/background-audio/permissions/schemas/: schema.json
src-tauri/plugins/background-audio/src/: lib.rs
(+141 files in other folders)
