[package]
name = "tauri-plugin-background-audio"
version = "0.1.0"
authors = ["FmoLogs Team"]
description = "Keep audio playback alive in background on Android"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-background-audio"

[dependencies]
tauri = { version = "2.0" }
serde = "1"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }
